# wanwan

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: embed.rs  exec.rs  fmt.rs  lib.rs  module.rs  validation.rs
src/exec/: val.rs
src/fmt/: binary.rs  text.rs
src/fmt/binary/: leb128.rs
src/fmt/text/: lexer.rs
src/module/: instr.rs  ty.rs
